...
      return null;
    });
  }


  return (
    <View testID="screen-homepage" flex={1}>
      <StatusBar barStyle="dark-content" backgroundColor="transparent" translucent />
      {isLoading || isLoadingHomeContext || !dataLoadedForCurrentFocus ? (
        <ContentLoader viewBox={`0 0 ${width} ${height}`} backgroundColor="#E8E8E8" foregroundColor="#F5F5F5">
          {/* Ícone de Notificação */}
          <Rect x={width - 82} y={106} rx="16" ry="16" width={64} height={64} />

...
                  <Text fontSize={12} fontWeight={600} color={'#10B981'}>
                    Ver todos
                  </Text>
                </TouchableOpacity>
              </HStack>

              <TouchableOpacity testID="card-medication" onPress={() => navigation.navigate('medicationTimeline')}>
                <Box bg="white" borderRadius={12} p={4} mt={4} shadow={2}>
                  <HStack alignItems="center" space={3}>
                    <Box bg="emerald.100" w={12} h={12} borderRadius={12} alignItems="center" justifyContent="center">
                      <PillIcon size="24" color="#10B981" />
                    </Box>
                    <VStack flex={1}>
...
